# mlops-23reg-project

./: .env.example  .gitignore  .gitlab-ci.yml  LICENSE  Makefile  README.md  docker-compose.dev.yaml  docker-compose.yaml  dvc.yaml  homework3_codestyle_sample.py  mlflow.db  params.yaml  pyproject.toml  requirements.txt  requirements_freeze.txt  setup.py  submission.csv
.dvc/: config
Docker/ml_service/: .env.example  Dockerfile
Docker/mlflow_image/: Dockerfile
data/raw/: .gitignore  pairs.csv.dvc  sample_submission.csv.dvc  test.csv.dvc  train.csv.dvc
docs/: Makefile  Notes_for_Cource_MLOps_and_production_ML.html  conf.py  index.rst  make.bat
docs/Notes_for_Cource_MLOps_and_production_ML files/: MLOps Task 2.docx  MLOps Task 3.docx  MLOps Task 4.docx  MLOps Task 5.docx  MLOps Task 6.docx  MLOps Task 7.docx
mlruns/artifacts/1/a8455c10b9884ed8bbed79f565c2acc7/artifacts/output_model_path/: MLmodel  conda.yaml  model.xgb  python_env.yaml  requirements.txt
models/: .gitignore  model_on_split_df.pkl
notebooks/: 0.1-foursqlm-mlops-baseline.ipynb  0.1-ik-foursqlm-sample-submission.ipynb
reports/: metrics_of_split_test_final.json  metrics_of_split_test_pairs.json  metrics_of_split_train_pairs.json
src/: common_funcs.py
src/app/: inference.py
src/data/: generate_pairs.py  raw_train_test_split.py
src/features/: build_features.py  build_pair_features.py
src/models/: evaluate.py  predict_model.py  train_model.py
tests/: test_evaluate.py  test_predict_model.py
