[tool.black]
line-length = 100

[tool.poetry]
name = "mlops23regproject"
version = "0.1.0"
description = "MLOps cource project by 23reg team."
authors = ["MLOps-23reg-team"]
license = "MIT"
packages = [
    { include = "src", from = "." }
]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "1.4.2"
haversine = "2.5.1"
sklearn = "0.0"
fuzzywuzzy = "0.18.0"
xgboost = "1.6.0"
dvc = {extras = ["s3"], version = "^2.10.2"}
protobuf = "3.20.1"
mlflow = "^1.26.0"
matplotlib = "^3.5.2"
python-dotenv = "^0.20.0"
uvicorn = "^0.17.6"
fastapi = "^0.78.0"
python-multipart = "^0.0.5"
types-setuptools = "^57.4.17"

[tool.poetry.dev-dependencies]
black = "22.3.0"
flake8 = "4.0.1"
mypy = "0.950"
bandit = "1.7.4"
pylint = "2.13.8"
ipykernel = "6.13.0"
nbqa = "1.3.1"
pytest = "^7.1.2"
great-expectations = "^0.15.8"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
